src/book-reviews/reviews-wlpcfg/k8s/deploy-reviews-v2.yaml
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews-v2
  namespace: jk-app
  labels:
    app: reviews-v2
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews-v2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v2
  namespace: jk-app
  labels:
    app: reviews
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews-v2
      version: v1
  template:
    metadata:
      labels:
        app: reviews-v2
        version: v1
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: AWS_ECR_URI
        imagePullPolicy: Always
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}
---
