src/book-reviews/reviews-wlpcfg/k8s/virtual-reviews-add.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: reviews
  namespace: jk-app
spec:
  awsName: reviews
  provider:
    virtualNode:
      virtualNodeRef:
        name: reviews
