src/book-reviews/reviews-wlpcfg/k8s/virtual-reviews-v2-add.yaml
# review v1 -> v2 update ---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: reviews
  namespace: jk-app
spec:
  awsName: reviews
  provider:
    virtualRouter:
        virtualRouterRef:
            name: reviews
